assets/css/blueprint.css
/* ... */
.bp-dropdown .third-level-nav-div-mobile {
    padding-left: 1rem !important;
    display: block;
    visibility: visible;
}
.bp-dropdown-menu {
    display: none;
    left: 0;
    min-width: 12rem;
    padding-top: 0px;
    position: absolute;
    width: 100%;
    top: 100%;
    z-index: 20;
}
.bp-dropdown-content {
    background-color: white;
    border-radius: 0px;
    box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
    padding-bottom: 1rem;
    padding-top: 1rem;
}
.bp-dropdown-item {
    color: #484848;
    display: block;
    font-size: 0.875rem;
    line-height: 1.5;
    padding: 0.75rem 1.5rem;
    position: relative;
}
.bp-dropdown-button {
    padding: 2.25rem 1.5rem;
    box-sizing: border-box;
    justify-content: space-between;
    border: 0;
    border-bottom: solid 1px #d6d6d6;
}
.bp a.bp-dropdown-item {
    padding-right: 3rem;
    white-space: nowrap;
}
.bp a.bp-dropdown-item:hover {
    background-color: whitesmoke;
    color: #0a0a0a;
}
.bp a.bp-dropdown-item.is-active {
    background-color: #4372d6;
    color: #fff;
}
.bp-dropdown-divider {
    background-color: #6b4370;
    border: none;
    display: block;
    height: 1px;
    margin: 0.5rem 0;
}
.bp-dropdown-trigger {
    width: 100%;
}

.filter-selector-div {
    border: 1px solid #d6d6d6;
}

.sgds-selector {
    font-family: Lato;
    font-size: 18px;
    border: none;
    background-color: transparent;
    padding: 0.625rem 0.75rem;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    width: 100%;
    line-height: 28px;
}

.bp-overflow-buttons {
    padding-left: 0;
    padding-right: 0;
    margin-left: 0.75rem;
    margin-right: -1rem;
}
@media screen and (max-width: 1023px) {
    .bp-overflow-buttons {
        overflow-x: auto;
        overflow-y: visible;
        margin-right: 0.75rem;
    }
}
.bp-overflow-buttons .bp-buttons {
    flex-wrap: wrap;
    white-space: nowrap;
    overflow-y: visible;
    height: 100%;
}
@media screen and (max-width: 1023px) {
    .bp-overflow-buttons .bp-buttons {
        flex-wrap: nowrap;
    }
}
.bp-overflow-buttons .bp-buttons .bp-sec-button {
    display: inline-block;
}

#filter-arrow {
    position: relative;
    float: right;
    height: 0px;
    width: 0px;
    right: 34px;
    top: 12px;
    pointer-events: none;
}

.float-buttons {
    cursor: pointer;
    text-align: right;
}
.float-buttons .actionbar__inner a,
.float-buttons .actionbar__inner a:hover {
    text-decoration: none;
}
.float-buttons a[target="_blank"]:after {
    content: none;
}
.float-buttons button.bp-button,
.float-buttons button.bp-button:hover,
.float-buttons button.bp-button:focus,
.float-buttons button.bp-button:active,
.float-buttons button.bp-button:visited {
    border-color: transparent;
    box-shadow: none;
    padding-right: 0;
}

.media {
    align-items: flex-start;
    display: flex;
    text-align: left;
}
.media .content:not(:last-child) {
    margin-bottom: 0.75rem;
}
.media .media {
    border-top: 1px solid rgba(107, 67, 112, 0.5);
    display: flex;
    padding-top: 0.75rem;
}
.media .media .content:not(:last-child),
.media .media .control:not(:last-child) {
    margin-bottom: 0.5rem;
}
.media .media .media {
    padding-top: 0.5rem;
}
.media .media .media + .media {
    margin-top: 0.5rem;
}
.media + .media {
    border-top: 1px solid rgba(107, 67, 112, 0.5);
    margin-top: 1rem;
    padding-top: 1rem;
}
.media.is-large + .media {
    margin-top: 1.5rem;
    padding-top: 1.5rem;
}

.media-left,
.media-right {
    flex-basis: auto;
    flex-grow: 0;
    flex-shrink: 0;
}

.media-left {
    margin-right: 1rem;
}

.media-right {
    margin-left: 1rem;
}

.media-content {
    flex-basis: auto;
    flex-grow: 1;
    flex-shrink: 1;
    overflow: auto;
    text-align: left;
}

.bp-menu {
    font-size: 1rem;
}
.bp-menu.is-small {
    font-size: 0.75rem;
}
.bp-menu.is-medium {
    font-size: 1.25rem;
}
.bp-menu.is-large {
    font-size: 1.5rem;
}
.bp-menu-list {
    line-height: 1.25;
}
.has-side-nav {
    box-sizing: unset;
}
.bp-menu-list a {
    font-size: 1.0625rem;
    color: #323232;
    display: block;
    padding: 0.75rem 0;
    border-bottom: 1px solid #767676;
}
.bp-menu-list a:hover {
    color: #6b4370;
    border-bottom: 1px solid #6b4370;
}
.bp-menu-list a.is-active {
    color: #6b4370;
    font-weight: 600;
    border-color: #6b4370;
    border-bottom: 2px solid #6b4370;
}
.bp-menu-list a.third-level-nav-header i.sgds-icon {
    line-height: 1.25;
}
.bp-menu-list a.third-level-nav-header,
.bp-menu-list a.third-level-nav-header.is-active,
.bp-menu-list a.third-level-nav-header:hover,
.bp-menu-list a.third-level-nav-header.is-active:hover {
    border-bottom: 1px solid white !important;
}
.bp-menu-list li ul {
    border-left: 1px dotted #6b4370;
    margin: 0.75em;
    padding-left: 0.75em;
}
.bp-menu-list li.third-level-nav-header.is-active + div.third-level-nav-div {
    display: block;
    visibility: visible;
}
.bp-menu-list li.third-level-nav-header.is-active + div.third-level-nav-div.is-hidden {
    visibility: hidden;
}
.bp-menu-list li.third-level-nav-header:active + div.third-level-nav-div,
.bp-menu-list li.third-level-nav-header:hover + div.third-level-nav-div {
    display: block;
    visibility: visible;
}
.bp-menu-list li.third-level-nav-header:active + div.third-level-nav-div.is-hidden,
.bp-menu-list li.third-level-nav-header:hover + div.third-level-nav-div.is-hidden {
    visibility: hidden;
}
.bp-menu-list li a.third-level-nav-item:hover,
.bp-menu-list li a.third-level-nav-item.is-active,
.bp-menu-list li a.third-level-nav-item.is-active:hover {
    border-top: 1px solid white;
    border-bottom: 1px solid white !important;
}
.bp-menu-list li a.third-level-nav-item {
    border-top: 1px solid white !important;
    border-bottom: 1px solid white;
    padding-left: 1.5rem;
}
.bp-menu-list li:not(:first-child) a {
    border-top: 1px solid #767676;
}
/* ... */

